syntax = "proto3";

package flyteidl.core;

option go_package = "github.com/flyteorg/flyteidl/gen/pb-go/flyteidl/core";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/struct.proto";
import "flyteidl/core/types.proto";
import "flyteidl/core/literals.proto";

message Primitive {
  // Defines one of simple primitive types. These types will get translated into different programming languages as
  // described in https://developers.google.com/protocol-buffers/docs/proto#scalar.
  oneof value {
    int64 integer = 1;
    double float_value = 2;
    string string_value = 3;
    bool boolean = 4;
    google.protobuf.Timestamp datetime = 5;
    google.protobuf.Duration duration = 6;
  }
}

service DataCatalog {
  // Create a new Dataset. Datasets are unique based on the DatasetID. Datasets are logical groupings of artifacts.
  // Each dataset can have one or more artifacts
  rpc CreateDataset (CreateDatasetRequest) returns (CreateDatasetResponse);

}
